# bevy_solari_directx

./: Cargo.toml  README.md
assets/: triangle.hlsl  triangle_ps.dxil  triangle_vs.dxil
examples/: demo.rs
src/: gpu.rs  lib.rs  swapchain.rs
